fix(intro section): fixed grid alignment for desktop

--- a/src/_desktop.scss
+++ b/src/_desktop.scss
@@ -34,6 +34,15 @@
             }
         }
         .section.intro {
+            .titled-paragraph{
+                grid-column: 2 / span 4;
+                h2 {
+                    grid-column: 1/2;
+                }
+                div {
+                    grid-column: 2/5;
+                }
+            }
             blockquote {
                 font-size: 3rem;
                 grid-column: 2/12;
